--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "repolens",
   "version": "1.0.0",
   "description": "TypeScript-powered GitHub automation script",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.13.2",
+    "chalk": "^5.6.2",
+    "commander": "^14.0.2",
+    "dotenv": "^17.2.3",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/commander": "^2.12.0",
     "@types/node": "^24.10.1",
     "ts-node": "^10.9.2"
   }
